# cctv_car

./: .env.sample  .gitignore  README.md  pyproject.toml
scripts/: mock_data.js  npm  run-web  seed_mock_data.py
webapp/: default_settings.py
webapp/cmd/: web.py
webapp/models/: __init__.py  camera_model.py  event_model.py  parking_model.py  user_model.py
webapp/services/: sync_service.py  user_service.py
webapp/web/: __init__.py
webapp/web/forms/: user_form.py
webapp/web/static/: package-lock.json  package.json
webapp/web/static/css/: app.css  setup.css
webapp/web/templates/: error.html
webapp/web/templates/base/: base.html  default_page.html  navbar.html
webapp/web/templates/camera/: live.html  manage.html  setting.html
webapp/web/templates/components/forms/: date_picker.html  form_renderer.html  text_input.html
webapp/web/templates/index/: index.html  log.html
webapp/web/templates/map/: map.html
webapp/web/templates/users/: login.html  register.html
webapp/web/utils/: acl.py  error_handling.py  template_filters.py
webapp/web/views/: __init__.py  camera_view.py  index_view.py  map_view.py  user_view.py
